# audio-app

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml  justfile
.cargo/: config.toml
apps/dioxus/: Cargo.toml  build.rs
apps/dioxus/app/: Cargo.toml
apps/dioxus/src/: components.rs  main.rs
apps/dioxus/src/components/: app.rs  slider.rs  toggle.css  toggle.rs
apps/egui/app/: Cargo.toml  README.md
apps/egui/app/src/: app.rs  lib.rs  main.rs
apps/egui/app/xcode/: Info.plist
apps/egui/app/xcode-ios/: project.yml
apps/egui/app/xcode-ios/Freeverb.xcodeproj/: project.pbxproj
apps/egui/plugin/src/: lib.rs
apps/egui/ui/src/: lib.rs  ui.rs  widgets.rs
apps/egui/ui/src/widgets/: check_box.rs  phase_scope.rs
apps/egui/web/: build.sh
apps/egui/web/public/: index.html  main.css
apps/egui/web/src/: lib.rs
apps/iced/src/: widgets.rs
apps/vizia/app/: Cargo.toml
apps/vizia/app/src/: main.rs  widgets.rs
apps/vizia/src/: widgets.rs
apps/vizia/src/widgets/: phase_scope.rs
crates/audio_module/: Cargo.toml  README.md
crates/audio_module/src/: lib.rs  message.rs  module.rs  parameter.rs  processor.rs  string_converter.rs  value_converter.rs
crates/audio_stream/: Cargo.toml  README.md
crates/audio_stream/src/: android.rs  cpal.rs  ios.rs  lib.rs  wasm.rs
crates/audio_stream/src/wasm/: audio_stream_worklet.js
crates/freeverb_module/: Cargo.toml  README.md
crates/freeverb_module/src/: lib.rs  wasm.rs
crates/freeverb_plugin/: Cargo.toml  README.md
crates/freeverb_plugin/src/: editor.rs  lib.rs  parameters.rs  plugin.rs
projects/dioxus/app/: AndroidManifest.xml  Cargo.toml  Dioxus.toml  build.rs
projects/dioxus/app/assets/: main.css
projects/dioxus/app/public/: .gitignore
projects/dioxus/app/src/: main.rs
projects/dioxus/app/src/components/: slider.css  slider.rs
projects/egui/app/: Cargo.toml
projects/egui/app/src/: app.rs  main.rs
projects/egui/app/xcode/Freeverb.xcodeproj/: project.pbxproj
projects/egui/plugin/: Cargo.toml
projects/egui/plugin/src/: lib.rs
projects/egui/ui/: Cargo.toml
projects/egui/ui/src/: ui.rs
projects/egui/ui/src/widgets/: check_box.rs  float_slider.rs
projects/egui/web/: Cargo.toml  README.md  build.sh
projects/egui/web/public/: .gitignore  index.js
projects/iced/app/: Cargo.toml
projects/iced/app/src/: app.rs  main.rs  widgets.rs
projects/iced/app/src/widgets/: phase_scope.rs
projects/vizia/app/src/: app.rs
scripts/: build-for-xcode.sh
xtask/: Cargo.toml
xtask/src/: main.rs  plugin.rs
