[package]
name = "audio_stream"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
audio_module = { workspace = true }

crossbeam-channel = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
audio_thread_priority = "0.34.0"
# Using the latest version to pull in iOS fixes landed since 0.16
cpal = { git = "https://github.com/RustAudio/cpal" }
log = { workspace = true }
# An easy to use crate for resampling at a fixed ratio
fixed-resample = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
  "AudioContext",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "AudioDestinationNode",
  "AudioNode",
  "console",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "MediaStreamConstraints",
  "MediaDevices",
  "MessageEvent",
  "MessagePort",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.3"
objc2-avf-audio = { version = "0.3.2", default-features = false, features = [
  "AVAudioSession",
  "AVAudioSessionTypes",
] }
