[package]
name = "freeverb_module"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
audio_module = { workspace = true }
audio_stream = { workspace = true }
freeverb = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_arrays = { workspace = true }
serde-wasm-bindgen = { workspace = true }
