[package]
name = "freeverb_plugin"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

clap = []
export_no_editor = []
vst3 = ["nih_plug/vst3"]

[dependencies]
audio_module = { workspace = true }
freeverb_module = { workspace = true }

freeverb = { workspace = true }
nih_plug = { workspace = true }
serde = { workspace = true, features = ["derive"] }
