[package]
name = "app_dioxus"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
audio_module = { workspace = true }
audio_stream = { workspace = true }
freeverb_module = { workspace = true }

anyhow = { workspace = true }
dioxus = { version = "0.7.0", features = [] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
