[package]
name = "app_egui"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
audio_module = { workspace = true }
audio_stream = { workspace = true }
freeverb_module = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
ui_egui = { path = "../ui" }

anyhow = { workspace = true }

[target.'cfg(not(target_os = "ios"))'.dependencies]
eframe = { workspace = true, default-features = true }

[target.'cfg(target_os = "ios")'.dependencies]
eframe = { workspace = true, features = ["wgpu"] }
wgpu = "27"
