[package]
name = "plugin_egui"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
default = []
clap = []
vst3 = ["freeverb_plugin/vst3"]

[dependencies]
audio_module = { workspace = true }
freeverb_module = { workspace = true }
freeverb_plugin = { workspace = true }
ui_egui = { path = "../ui" }

nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
# 
