[package]
name = "ui_egui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
audio_module = { workspace = true }
audio_stream = { workspace = true }
freeverb_module = { workspace = true }

anyhow = { workspace = true }
egui = { workspace = true }
