[package]
name = "app_iced"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
audio_module = { workspace = true }
audio_stream = { workspace = true }
freeverb_module = { workspace = true }

anyhow = { workspace = true }
iced = { version = "0.13.1", features = ["advanced", "canvas", "tokio"] }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { version = "1.48.0", features = ["time"] }
